<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group>
        <item
            android:id="@+id/nav_fogospt"
            android:icon="@drawable/ic_fire"
            android:title="@string/register_fire" />
        <item
            android:id="@+id/nav_firelist"
            android:icon="@drawable/ic_list"
            android:title="@string/fire_list" />
        <item
            android:id="@+id/nav_extra"
            android:icon="@drawable/ic_star"
            android:title="@string/extra" />
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_dashboard"
            android:title="@string/dashboard" />
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_map"
            android:title="Map" />
    </group>
</menu>