<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="4dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/risk"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:baselineAligned="false"
            android:gravity="center_vertical|center"
            android:text="@string/risk"
            android:textSize="30sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginBottom="4dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:weightSum="3">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:gravity="center_vertical|start"
                android:text="@string/place"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:weightSum="4">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:baselineAligned="false"
                    android:gravity="center_vertical|start"
                    android:text="@string/input_district"
                    android:textSize="20sp" />

                <Spinner
                    android:id="@+id/district_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:textSize="26sp" />
            </LinearLayout>

            <EditText
                android:id="@+id/input_county"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ "
                android:hint="@string/input_county"
                android:inputType="textAutoCorrect"
                android:maxLength="20"
                android:backgroundTint="@color/black"/>

            <EditText
                android:id="@+id/input_parish"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ "
                android:hint="@string/input_parish"
                android:inputType="textAutoCorrect"
                android:maxLength="20" />

        </LinearLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:gravity="center_vertical|start"
            android:text="@string/personal"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="4dp"
            android:layout_weight="0.5"
            android:orientation="horizontal"
            android:weightSum="4">
            <!--user-->

            <EditText
                android:id="@+id/input_name"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ "
                android:hint="@string/name"
                android:inputType="textCapWords"
                android:maxLength="60" />

            <EditText
                android:id="@+id/input_cc"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:hint="@string/cc"
                android:inputType="number"
                android:maxLength="8" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="4dp"
            android:layout_weight="0.6"
            android:orientation="horizontal"
            android:weightSum="4">

            <EditText
                android:id="@+id/input_obs"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ "
                android:hint="@string/obs"
                android:inputType="textAutoCorrect|textMultiLine"
                android:maxLength="200" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="4dp"
            android:layout_weight="0.8"
            android:orientation="horizontal"
            android:weightSum="4">

            <Button
                android:id="@+id/buttonFire"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="3"
                android:backgroundTint="@color/purple_500"
                android:drawableLeft="@drawable/ic_list_add"
                android:imeOptions="actionDone"
                android:shadowColor="@color/black"
                android:text="@string/register_fire"
                app:cornerRadius="10dp" />

            <Button
                android:id="@+id/buttonFireInstant"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:backgroundTint="@color/purple_700"
                android:imeOptions="actionDone"
                android:text="Fogo Pré-feito"
                app:cornerRadius="10dp" />

        </LinearLayout>


    </LinearLayout>

</LinearLayout>